Renamed SmsDelivery to Sms

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "pip-clients-smsdelivery-node",
+    "name": "pip-clients-sms-node",
     "version": "1.0.0",
     "author": "Conceptual Vision Consulting LLC",
-    "description": "Node.js client sdk for pip-services-smsdelivery microservice",
+    "description": "Node.js client sdk for pip-services-sms microservice",
     "contributors": [
         {
             "name": "Sergey Seroukhov",
@@ -21,7 +21,7 @@
     "noAnalyze": true,
     "repository": {
         "type": "git",
-        "url": "ssh://git@github.com:pip-services-infrastructure/pip-clients-smsdelivery-node.git"
+        "url": "ssh://git@github.com:pip-services-infrastructure/pip-clients-sms-node.git"
     },
     "license": "MIT",
     "engines": {
@@ -53,6 +53,6 @@
         "matcha": "*",
         "mocha": "*",
         "aws-sdk": "*",
-        "pip-services-smsdelivery-node": "git+ssh://git@github.com:pip-services-infrastructure/pip-services-smsdelivery-node.git"
+        "pip-services-sms-node": "git+ssh://git@github.com:pip-services-infrastructure/pip-services-sms-node.git"
     }
 }
