--- a/config/test_connections.yaml.example
+++ b/config/test_connections.yaml.example
@@ -1,7 +1,7 @@
 lambda:
     connection:
         protocol: aws
-        arn: arn:aws:lambda:us-east-1:531917873182:function:pip-services-smsdelivery
+        arn: arn:aws:lambda:us-east-1:531917873182:function:pip-services-sms
 
     credential:
         access_id: AZZZZZZFCBHD4O4Q
