--- a/package.json
+++ b/package.json
@@ -53,6 +53,6 @@
         "matcha": "*",
         "mocha": "*",
         "aws-sdk": "*",
-        "pip-services-sms-node": "git+ssh://git@github.com:pip-services-infrastructure/pip-services-sms-node.git"
+        "pip-services-sms-node": "^1.0.1"
     }
 }
